welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:5: error: '(' expected but identifier found.
     if estSurBiscuits(){
        ^Poucet:7: error: illegal start of simple expression
     }} while (!crossing())
      ^