welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var nbBiscuits:Int=0
while (!sortieTrouvee) {
  nbBiscuits=0
  do { avance()
     if estSurBiscuits(){
       nbBiscuits=nbBiscuits+1
     }} while (!crossing())
  if (nbBiscuits<=2) {
    droite() 
  } else (gauche)
}
avance()